--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,10 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1fr;
+	grid-gap: 2rem;
+}
+
+.wrapper {
+	max-width: 90%;
+	margin: auto;
 }
