--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
 	text-align: center;
 }
+
+.book_description_group h5 {
+	margin-top: 3rem;
+	padding: 0;
+}
+.book_description_group h3 {
+	margin: 0;
+	padding: 0;
+}
